Bug 466895 - Direct messages show information that is not applicable
Summary: Direct messages show information that is not applicable
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-03-05 15:45 UTC by Nicolas Fella
Modified: 2023-04-29 16:52 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2023-03-05 15:45:32 UTC
When using 1:1 chats Neochat shows information in the room info sidebar that isn't relevant there, only for "proper" groups.

For example the room list shows two members.
It also shows "No canonical alias" and "No topic"
Also when the other person replies to your message, which causes it being highlighted, which is unnecessary in a direct chat
Comment 1 Bug Janitor Service 2023-03-05 16:22:20 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/827
Comment 2 Bug Janitor Service 2023-03-05 17:08:29 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/828
Comment 3 Tobias Fella 2023-03-05 22:43:17 UTC
Git commit e6a060c1927219ece41a13fe5ebe3d648f502274 by Tobias Fella.
Committed on 05/03/2023 at 16:21.
Pushed by tfella into branch 'master'.

Don't show highlights in DMs

It's a DM, the messages are all meant for us anyway

M  +1    -1    src/models/messageeventmodel.cpp

https://invent.kde.org/network/neochat/commit/e6a060c1927219ece41a13fe5ebe3d648f502274
Comment 4 Tobias Fella 2023-04-29 16:52:18 UTC
Git commit d844945453af2bdc9644d2931c96a37ec4a01e16 by Tobias Fella.
Committed on 29/04/2023 at 16:39.
Pushed by tfella into branch 'master'.

Improve RoomDrawer for direct chats

Don't show irrelevant stuff like the member list, description, alias

M  +13   -0    src/neochatroom.cpp
M  +2    -0    src/neochatroom.h
M  +2    -3    src/qml/Dialog/UserDetailDialog.qml
A  +71   -0    src/qml/Panel/DirectChatDrawerHeader.qml     [License: GPL(v2.0+)]
A  +99   -0    src/qml/Panel/GroupChatDrawerHeader.qml     [License: GPL(v2.0+)]
M  +19   -82   src/qml/Panel/RoomDrawer.qml
M  +2    -0    src/res.qrc

https://invent.kde.org/network/neochat/commit/d844945453af2bdc9644d2931c96a37ec4a01e16