Improve RoomDrawer for direct chats

Don't show irrelevant stuff like the member list, description, alias

BUG: 466895