src/qml/Panel/RoomDrawer.qml
@@ -106,87 +106,10 @@ Kirigami.OverlayDrawer {
                 }
             }
 
-            RowLayout {
+            Loader {
+                active: true
                 Layout.fillWidth: true
-                Layout.leftMargin: Kirigami.Units.largeSpacing
-                spacing: Kirigami.Units.largeSpacing
-
-                Kirigami.Avatar {
-                    Layout.preferredWidth: Kirigami.Units.gridUnit * 3.5
-                    Layout.preferredHeight: Kirigami.Units.gridUnit * 3.5
-
-                    name: room ? room.displayName : ""
-                    source: room ? ("image://mxc/" +  room.avatarMediaId) : ""
-
-                    Rectangle {
-                        visible: room.usesEncryption
-                        color: Kirigami.Theme.backgroundColor
-
-                        width: Kirigami.Units.gridUnit
-                        height: Kirigami.Units.gridUnit
-                        anchors.bottom: parent.bottom
-                        anchors.right: parent.right
-
-                        radius: width / 2
-
-                        Kirigami.Icon {
-                            source: "channel-secure-symbolic"
-                            anchors.fill: parent
-                        }
-                    }
-                }
-
-                ColumnLayout {
-                    Layout.fillWidth: true
-                    Layout.alignment: Qt.AlignVCenter
-                    spacing: 0
-
-                    Kirigami.Heading {
-                        Layout.fillWidth: true
-                        level: 1
-                        type: Kirigami.Heading.Type.Primary
-                        wrapMode: QQC2.Label.Wrap
-                        text: room ? room.displayName : i18n("No name")
-                        textFormat: Text.PlainText
-                    }
-                    Kirigami.SelectableLabel {
-                        Layout.fillWidth: true
-                        textFormat: TextEdit.PlainText
-                        text: room && room.canonicalAlias ? room.canonicalAlias : i18n("No Canonical Alias")
-                    }
-                }
-            }
-
-            QQC2.ScrollView {
-                Layout.leftMargin: Kirigami.Units.largeSpacing
-                Layout.rightMargin: Kirigami.Units.largeSpacing
-                Layout.fillWidth: true
-                Layout.fillHeight: true
-                Layout.minimumHeight: Math.min(topicText.contentHeight, Kirigami.Units.gridUnit * 15)
-
-                // HACK: Hide unnecessary horizontal scrollbar (https://bugreports.qt.io/browse/QTBUG-83890)
-                QQC2.ScrollBar.horizontal.policy: QQC2.ScrollBar.AlwaysOff
-
-                QQC2.TextArea {
-                    id: topicText
-                    padding: 0
-                    text: room && room.topic ? room.topic.replace(replaceLinks, "<a href=\"$1\">$1</a>") : i18n("No Topic")
-                    readonly property var replaceLinks: /(http[s]?:\/\/[^ \r\n]*)/g
-                    textFormat: TextEdit.MarkdownText
-                    wrapMode: Text.WordWrap
-                    selectByMouse: true
-                    color: Kirigami.Theme.textColor
-                    selectedTextColor: Kirigami.Theme.highlightedTextColor
-                    selectionColor: Kirigami.Theme.highlightColor
-                    onLinkActivated: UrlHelper.openUrl(link)
-                    readOnly: true
-                    MouseArea {
-                        anchors.fill: parent
-                        acceptedButtons: Qt.NoButton
-                        cursorShape: parent.hoveredLink ? Qt.PointingHandCursor : Qt.IBeamCursor
-                    }
-                    background: Item {}
-                }
+                sourceComponent: room.isDirectChat() ? directChatDrawerHeader : groupChatDrawerHeader
             }
 
             Kirigami.ListSectionHeader {
@@ -233,6 +156,7 @@ Kirigami.OverlayDrawer {
                 label: i18n("Members")
                 activeFocusOnTab: false
                 spacing: 0
+                visible: !room.isDirectChat()
 
                 QQC2.ToolButton {
                     id: memberSearchToggle
@@ -284,7 +208,6 @@ Kirigami.OverlayDrawer {
             QQC2.ScrollView {
                 Layout.fillWidth: true
                 Layout.fillHeight: true
-                Layout.minimumHeight: Math.min(topicText.contentHeight, Kirigami.Units.gridUnit * 15)
 
                 // HACK: Hide unnecessary horizontal scrollbar (https://bugreports.qt.io/browse/QTBUG-83890)
                 QQC2.ScrollBar.horizontal.policy: QQC2.ScrollBar.AlwaysOff
@@ -293,6 +216,7 @@ Kirigami.OverlayDrawer {
                     id: userListView
                     clip: true
                     activeFocusOnTab: true
+                    visible: !room.isDirectChat()
 
                     model: KSortFilterProxyModel {
                         id: sortedMessageEventModel
@@ -317,7 +241,10 @@ Kirigami.OverlayDrawer {
                         labelItem.textFormat: Text.PlainText
 
                         onClicked: {
-                            const popup = userDetailDialog.createObject(QQC2.ApplicationWindow.overlay, {room: room, user: user, displayName: name, avatarMediaId: avatar})
+                            const popup = userDetailDialog.createObject(QQC2.ApplicationWindow.overlay, {
+                                room: room,
+                                user: user, displayName: name,
+                            })
                             popup.closed.connect(function() {
                                 userListItem.highlighted = false
                             })
@@ -363,5 +290,15 @@ Kirigami.OverlayDrawer {
         id: userDetailDialog
 
         UserDetailDialog {}
+    }
+
+    Component {
+        id: groupChatDrawerHeader
+        GroupChatDrawerHeader {}
+    }
+
+    Component {
+        id: directChatDrawerHeader
+        DirectChatDrawerHeader {}
     }
 }
